# itmnet-pytorch

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/dataset/: mydataset.yaml
conf/model/: itmnet.yaml  unet.yaml
conf/optimizer/: adam.yaml
history/17fc5dc107/: config.yaml
history/ead7392742/: config.yaml
outputs/2021-03-24/20-18-25/.hydra/: config.yaml
outputs/2021-03-24/20-49-26/.hydra/: config.yaml  hydra.yaml
outputs/2021-03-24/21-10-48/.hydra/: config.yaml
outputs/2021-03-24/21-17-49/.hydra/: config.yaml
outputs/2021-03-30/14-18-59/.hydra/: config.yaml
outputs/2021-03-31/16-06-41/.hydra/: config.yaml
outputs/2021-04-20/13-40-40/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2021-04-20/13-54-21/.hydra/: config.yaml
outputs/2021-04-20/14-19-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2021-04-20/14-20-34/.hydra/: config.yaml  hydra.yaml
outputs/2021-04-20/15-27-06/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2021-04-20/15-27-47/.hydra/: config.yaml
outputs/2021-04-20/15-29-08/.hydra/: config.yaml
outputs/2021-04-20/16-27-13/.hydra/: config.yaml  overrides.yaml
outputs/2021-04-20/16-44-40/.hydra/: hydra.yaml
outputs/2021-04-20/16-51-31/.hydra/: overrides.yaml
src/: itmnet.py  test.py  test_regressor.py  train.py  train_regressor.py  transform.py  unet.py  util.py
