[tool.poetry]
name = "itmnet_pytorch"
version = "0.0.1"
description = "This is an implementation for iTM-Net: Deep Inverse Tone Mapping Using Novel Loss Function Considering Tone Mapping Operator."
authors = ["Yuma Kinoshita <y.kinoshita.research@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
torch = "^1.4.0"
torchvision = "^0.5.0"
deepy = {git = "ssh://git@github.com/popura/deepy.git"}
torchsummary = "^1.5.1"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
