[tool.poetry]
name = "itmnet_pytorch"
version = "0.1.0"
description = "This is an implementation for iTM-Net: Deep Inverse Tone Mapping Using Novel Loss Function Considering Tone Mapping Operator."
authors = ["Yuma Kinoshita <y.kinoshita.research@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
torchinfo = "^1.4.4"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
