[tool.poetry]
name = "itmnet_pytorch"
version = "0.1.0"
description = "This is an implementation for iTM-Net: Deep Inverse Tone Mapping Using Novel Loss Function Considering Tone Mapping Operator."
authors = ["Yuma Kinoshita <y.kinoshita.research@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
torch = "^1.8.0"
torchvision = "^0.9.0"
torchinfo = "^1.4.4"
hydra-core = "^1.0.6"
kornia = "^0.5.0"
pandas = "^1.2.3"
OpenEXR = "^1.3.2"
deepy = {path = "external/deepy-0.5.0-py3-none-any.whl"}
hdrpy = {path = "external/hdrpy-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
